--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -1,20 +1,98 @@
 .container {
-    padding-top: 75px;
+    padding-top: 30vh;
+    height: 70vh;
+    position: relative;
 }
 .self-introduction {
     position: relative;
-    width: 300px;
-    margin: 0 auto;    
+    width: 40vw;
+    height: 23vh;
+    margin: 0 auto;
+}
+.gram {
+    font-weight: normal;
 }
 .cloud1 {
     position: absolute;
-    left: 300px;
-    bottom: 150px;
+    left: -150px;
+    bottom: -50px;
 }
 .cloud2 {
     position: absolute;
-    right: 300px;
-    top: 150px;
+    right: -150px;
+    top: -75px;
+}
+.mountain {
+    height: 47vh;
+}
+.middle-container {
+    position: relative;
+    background-color: white;
+}
+.profile {
+    padding-top: 15vh;
+    height: 63vh;
+}
+.profilepic {
+    width: 25%;
+}
+.hr1 {
+    top: 4vh;
+}
+.langpic {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+.itpic {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+.skills {
+    padding-top: 10vh;
+    height: 80vh;
+}
+.skill-row1 {
+    width: 50%;
+    margin: 100px auto 100px;
+    text-align: left;
+    line-height: 2;
+    position: relative;
+    right: 2%;
+}
+.skill-row2 {
+    width: 50%;
+    margin: 100px auto 100px;
+    text-align: left;
+    line-height: 1.7;
+    position: relative;
+    left: 2%;
+}
+.hr2 {
+    bottom: 6vh;
+}
+.contact-me {
+    line-height: 2;
+    padding-bottom: 10vh;
+}
+.contactmsg {
+    width: 35vw;
+    margin: 2vw auto;
+}
+.bottom-container {
+    padding: 5vh;
+    background-color: #66BFBF;
+}
+.footer-link {
+    text-decoration: none;
+    padding: 0 2vw 0 2vw;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+.footer {
+    color: #EAF6F6;
+    margin: 3vh auto 0;
 }
 
 body {
@@ -22,11 +100,66 @@ body {
     text-align: center;
     background-color: #e4f9f5;
     font-family: 'Merriweather', serif;
+    line-height: 1.2;
 }
 h1 {
     font-family: 'Sacramento', cursive;
+    font-size: 5.625rem;
+    margin: auto auto 0 auto;
+    color: #66BFBF;
 }
 
-h2, h3 {
+h2 {
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    margin: 0px auto 0px;
+    color: #66BFBF;
+}
+
+h3 {
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+h6 {
+    margin-top: 2vh;
+    font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+a {
+    color: #11999E;
+}
+hr {
+    border-style: dotted none none;
+    border-width: 10px;
+    width: 5%;
+    align-content: start;
+    color: #c6c8cc;
+    position: relative;
+}
+p {
+    color: #40514E;
+}
+.myButton {
+    margin-top: 2vh;
+    box-shadow: 0px 10px 14px -7px #276873;
+    background:linear-gradient(to bottom, #5aa3bd 5%, #22a6ba 100%);
+    background-color:#5aa3bd;
+    border-radius:10px;
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Verdana;
+    font-size:20px;
+    padding:5px 12px;
+    text-decoration:none;
+}
+.myButton:hover {
+    background:linear-gradient(to bottom, #22a6ba 5%, #5aa3bd 100%);
+    background-color:#22a6ba;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
 }
